packages/tree-sitter-ccini/test/corpus/DataModule.txt


==================
DataModule Empty Declaration
==================

DataModule

---

(source_file
  (dataModule))

==================
DataModule 
==================

DataModule
	ModuleName = Browncoats
	IsFaction = 1

---

(source_file
  (dataModule
	(assignment
		(property)
		(string))
	(assignment
		(property)
		(number))))

==================
DataModule Complete 
==================

DataModule
	ModuleName = Browncoats
	IsFaction = 1
	IconFile = ContentFile
		FilePath = Browncoats.rte/ModuleIcon.png
	Description = A strong mercenary group who are fearsome when confronted up-close. What they lack in range is made up for in durability, allowing them to close distances while soaking bullets.
	CrabToHumanSpawnRatio = 0
	FactionBuyMenuTheme = BuyMenuTheme
		SkinFile = Browncoats.rte/GUIs/BuyMenuSkin.ini
		BackgroundColorIndex = 62
		LogoFile = Browncoats.rte/GUIs/BuyMenuLogo.png
	IncludeFile = Browncoats.rte/Effects.ini
	IncludeFile = Browncoats.rte/Actors.ini
	IncludeFile = Browncoats.rte/Devices.ini
	IncludeFile = Browncoats.rte/Craft.ini
	IncludeFile = Browncoats.rte/Loadouts.ini

---

(source_file
  (dataModule
	(assignment
		(property)
		(string))
	(assignment
		(property)
		(number))
	(assignment
		(property)
		(classDefinition
			(className)
			(assignment
				(property)
				(modulePath
					(fileExtension)))))
	(assignment
		(property)
		(string))
	(assignment
		(property)
		(number))
	(assignment
		(property)
		(classDefinition
			(className)
			(assignment
				(property)
				(modulePath
					(fileExtension)))
			(assignment
				(property)
				(number))
			(assignment
				(property)
				(modulePath
					(fileExtension)))))
	(assignment
		(property)
		(modulePath
			(fileExtension)))
	(assignment
		(property)
		(modulePath
			(fileExtension)))
	(assignment
		(property)
		(modulePath
			(fileExtension)))
	(assignment
		(property)
		(modulePath
			(fileExtension)))
	(assignment
		(property)
		(modulePath
			(fileExtension)))
))
					
